# RealEngine-Editor

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  premake5.lua
.github/workflows/: cmake-multi-platform.yml
Editor/: CMakeLists.txt  imgui.ini
Editor/ExampleProject/: ExampleProject.reproj  asset_registry.realdb
Editor/ExampleProject/assets/: test.rescene  test.yaml
Editor/ExampleProject/assets/Scenes/: Text_Benchmark.rescene  test.rescene
Editor/ExampleProject/assets/Scripts/: CoralManaged.sln  Example.Managed.csproj  premake5.lua
Editor/ExampleProject/assets/Scripts/Properties/: launchSettings.json
Editor/ExampleProject/assets/Scripts/Source/: ExampleClass1.cs  ExampleClass2.cs  Grid.cs  Main.cs  TextTest.cs
Editor/assets/shaders/: sprite.shader  text.shader  uber.shader
Editor/docs/: CMakeLists.txt  Doxyfile.in  FILES.md
Editor/src/: EditorAPP.cpp  EditorLayer.cpp  EditorLayer.h
Editor/src/Events/: GeneralEvents.h  PanelEvents.h
Editor/src/Panels/: FileExplorerPanel.cpp  FileExplorerPanel.h  LoggerPanel.cpp  LoggerPanel.h  Panel.h  PropertiesPanel.cpp  PropertiesPanel.h  SceneHierarchyPanel.cpp  SceneHierarchyPanel.h  StatusPanel.cpp  StatusPanel.h
Editor/tools/: SetupExampleProject.bat  generate_doxygen.sh
ProjectCreator/: CMakeLists.txt  imgui.ini
ProjectCreator/src/: ProjectCreatorAPP.cpp  ProjectCreatorLayer.cpp  ProjectCreatorLayer.h
RealEngine-ScriptCore/: premake5.lua
RealEngine-ScriptCore/Source/RealEngine/: Entity.cs  InternalCalls.cs  Logger.cs
RealEngine-ScriptCore/Source/RealEngine/Components/: Component.cs  ScriptComponent.cs  SpriteRendererComponent.cs  TextRendererComponent.cs  TransformComponent.cs
